--- a/xubuntu-fifteen/style-resp-600.css
+++ b/xubuntu-fifteen/style-resp-600.css
@@ -12,6 +12,9 @@ body {
 	width: 100%;
 	border-radius: 0;
 }
+	#header_outer {
+		z-index: 5000;
+	}
 	#header {
 		padding: 0;
 	}
@@ -26,6 +29,9 @@ body {
 			background-color: inherit;
 			border-radius: 0;
 			box-shadow: none;
+		}
+		a#opennavi {
+			z-index: 6000;
 		}
 
 #content_outer {
@@ -51,7 +57,8 @@ body {
 			#content.air .gallery + .boxed {
 				margin-top: 1.5em;
 			}
-		#main {
+		#main,
+		#sidebar {
 			padding: 1em 2.5% !important;
 		}
 		
